# solana-meme-tools

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: compat-build.yml
back/: .gitignore  Cargo.toml  tauri.conf.json
back/.github/: copilot-instructions.md
back/src/: config.rs  lib.rs  main.rs
back/src/services/: burn_tokens.rs  close_accounts.rs  close_token_account.rs  common.rs  create_meme_token.rs  distribute_sol.rs  get_sol_balance.rs  get_token_balance.rs  long_polling.rs  quick_buy.rs  quick_sell.rs  refund_wallets.rs  sniper_bot.rs
back/src/solana/: buy.rs  create.rs  ipfs.rs  mod.rs  sell.rs  tokens.rs
executor/: legacy.ts
front/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.css  App.jsx  Sidebar.css  index.css  main.jsx
front/src/components/: JobProgressMonitor.jsx  SettingsField.jsx  Sidebar.jsx  Toast.jsx
front/src/components/examples/: JobOnlyBurnTest.jsx  JobOnlyCloseAccountsTest.jsx  JobOnlyTokensTest.jsx  TokensFetchPollingTest.jsx  (+1 more)
front/src/context/: AppContext.jsx  JobContext.jsx
front/src/hooks/: useBalanceRefresh.js  useGetTokensBalancesBatch.js  useJobHistory.js  useJobManagerSettings.js  useJobOnlyBurn.js  useJobOnlyCloseAccounts.js  useJobOnlyCloseTokenAccounts.js  useJobOnlyTokens.js  useJobProgress.js  useJobRefresh.js  useJobs.js  useTauri.js  useUnifiedJobPolling.js
front/src/lib/: jobManager.js  jobProgress.js  tauriClient.js  utils.js
front/src/tabs/: registry.jsx
front/src/views/: Bundler.jsx  Settings.jsx  Swap.jsx  Wallets.jsx
(+20 files in other folders)
